# stock-ah-premium-ai

./: .gitignore  AGENTS.md  Makefile  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260504_0001_initial_schema.py  20260504_0002_add_ha_premium_fields.py  20260504_0004_create_watchlist_stock.py  (+55 more)
backend/app/: __init__.py  main.py
backend/scripts/: export_trade_calendar.py  seed_qmt_review_demo.py
backend/tests/: test_a_stock_st.py  test_agent_chart.py  test_agent_engine.py  test_agent_sandbox.py  test_agent_tools.py  test_agent_web_search.py  test_auth_service.py  test_chat_governance.py  test_chat_routes.py  test_config.py  test_data_query_service.py  test_dividend_reinvestment_service.py  test_eastmoney_kline_service.py  test_export_trade_calendar.py  test_image_generation_service.py  test_limit_up_backtest.py  test_limit_up_focus_json.py  test_limit_up_leader_scoring.py  test_limit_up_persist_selected.py  test_limit_up_push_service.py  test_limit_up_selected_stock.py  test_llm_client.py  test_llm_metrics_routes.py  test_llm_service.py  test_manual_import_service.py  test_market_data_orchestrator.py  test_nine_turn_push_service.py  test_notification_service.py  test_premium_formula.py  test_premium_query_service.py  test_premium_trade_day_filter.py  test_qmt_ingest.py  test_qmt_review.py  test_realtime_premium_service.py  test_sentiment_gate.py  test_sql_guard_service.py  test_stock_identity_resolver.py  test_sync_jobs.py  test_sync_service_tencent_unadjusted.py  test_tencent_kline_service.py  (+7 more)
(+245 files in other folders)
