[project]
name = "stock-ah-premium-service"
version = "0.1.0"
description = "FastAPI service for Tushare stock data persistence, AH premium calculation, and LLM Q&A."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.3,<2.0",
  "apscheduler>=3.10.4,<4.0",
  "fastapi>=0.115.0,<1.0",
  "httpx>=0.27.0,<1.0",
  "pandas>=2.2.0,<3.0",
  "pydantic>=2.8.0,<3.0",
  "pydantic-settings>=2.4.0,<3.0",
  "pymysql>=1.1.1,<2.0",
  "python-dateutil>=2.9.0,<3.0",
  "sqlalchemy>=2.0.34,<3.0",
  "sqlglot>=25.20.0,<26.0",
  "tushare>=1.4.21,<2.0",
  "uvicorn[standard]>=0.30.6,<1.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0",
  "ruff>=0.6.8,<1.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
